--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,7 +1,7 @@
 nelmio_cors:
     defaults:
         origin_regex: true
-        allow_origin: [ 'http://localhost:4200' ] # Pon directamente tu URL de Angular aquí para probar
+        allow_origin: [ 'http://localhost:4200' ]
         allow_methods: [ 'GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE' ]
         allow_headers: [ 'Content-Type', 'Authorization' ]
         expose_headers: [ 'Link' ]
